FriendlyProxyFactory using ASM - further development